--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,17 +21,20 @@
     "react-router-dom": "^7.8.2",
     "react-spinners": "^0.17.0",
     "rehype-highlight": "^7.0.2",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "@vitejs/plugin-react": "^4.6.0"   
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
