--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^4.6.0",
     "axios": "^1.11.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.542.0",
@@ -22,7 +23,7 @@
     "react-spinners": "^0.17.0",
     "rehype-highlight": "^7.0.2",
     "tailwindcss": "^4.1.13",
-    "@vitejs/plugin-react": "^4.6.0"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
